Updates, fixed dark mode toggle

--- a/atomic-scss/utilities/utility-variables.scss
+++ b/atomic-scss/utilities/utility-variables.scss
@@ -7,6 +7,8 @@
 // COLORS
 // --------------------------------------------------
 :root {
+    color-scheme: dark light;
+
     --main-font-color: #FFF;
     --primary-color: #D81B60;
     --primary-color-tint: #FFBDD3;
